fix: 펜타그램 노드 삭제 시 충돌 미감지 해결, 삭제 노드 우선순위(z-index) 하향
- fix #37 - task 1, 2

--- a/src/feature/Pentagram/components/common/style/positionAdjuster.scss
+++ b/src/feature/Pentagram/components/common/style/positionAdjuster.scss
@@ -17,5 +17,9 @@
     border-radius: 50%;
     transform: translate(var(--transformX), var(--transformY));
     background-color: rgb(var(--background-color));
-    z-index: 1;
+    z-index: 2;
+
+    &.behind {
+        z-index: 1
+    }
 }
